# mono

./: .gitmodules  CMakeLists.txt  MCG-WinRT-JIT-Support.patch  README.md  config-cmake.h.in  corert.patch
cmake/: CSharp.cmake  GenerateMonoWrapper.cmake  ToNativePath.cmake
eglib/: CMakeLists.txt  config-cmake.h.in
eglib/src/: CMakeLists.txt
libgc/: CMakeLists.txt  finalize.c
mcs/class/: Makefile
mcs/class/Mono.Security/Assembly/: AssemblyInfo.cs
mcs/class/System.Private.CompilerServices.ICastable/: Makefile  System.Private.CompilerServices.ICastable.dll.sources  TypeForwarders.cs
mcs/class/System.Private.CompilerServices.ICastable/Assembly/: AssemblyInfo.cs
mcs/class/System.Private.Interop/: InteropExtensions.cs  Makefile  System.Private.Interop.dll.sources  TypeExtensions.cs  TypeForwarders.cs
mcs/class/System.Private.Interop/Assembly/: AssemblyInfo.cs
mcs/class/System.Private.Interop/corert/: SR.GetResourceString.cs  SR.cs
mcs/class/System.Runtime.WindowsRuntime/: CancellationTokenRegistrationExtensions.cs  FrameworkEventSource.cs  HResults.cs  Interop.RoGetActivationFactory.cs  Makefile  StubHelpers.cs  System.Runtime.WindowsRuntime.dll.sources
mcs/class/System.Runtime.WindowsRuntime/Assembly/: AssemblyInfo.cs
mcs/class/System.Runtime.WindowsRuntime/corefx/: SR.cs
mcs/class/System/Assembly/: AssemblyInfo.cs
mcs/class/System/Mono.Net.Security/: MonoTlsStream.cs
mcs/class/System/System.Net/: HttpWebRequest.cs  SimpleAsyncResult.cs  WebConnection.cs
mcs/class/System/System.Security.Cryptography.X509Certificates/: X509Certificate2.cs  X509Certificate2Impl.cs  X509Certificate2ImplMono.cs  X509ChainImpl.cs  X509Helper2.cs
mcs/class/System/Test/System.Security.Cryptography.X509Certificates/: X509Certificate2Test.cs
mcs/class/corlib/: corlib.dll.sources
mcs/class/corlib/Assembly/: AssemblyInfo.cs
mcs/class/corlib/Mono/: Runtime.cs
mcs/class/corlib/ReferenceSources/: win32native.cs
mcs/class/corlib/System/: TimeZoneInfo.cs
mcs/class/corlib/System.Security.Cryptography.X509Certificates/: X509Certificate.cs  X509CertificateImpl.cs  X509CertificateImplMono.cs
mcs/class/corlib/Test/System/: TimeZoneInfoTest.cs
mcs/class/corlib/coreclr/: ICastable.cs
mcs/class/referencesource/mscorlib/microsoft/win32/safehandles/: safelibraryhandle.cs
mcs/class/referencesource/mscorlib/system/: exception.cs
mcs/class/referencesource/mscorlib/system/resources/: resourcemanager.cs
mcs/class/referencesource/mscorlib/system/runtime/interopservices/windowsruntime/: irestrictederrorinfo.cs
mcs/class/referencesource/mscorlib/system/threading/: synchronizationcontext.cs
mono/: CMakeLists.txt
mono/arch/: CMakeLists.txt
mono/arch/arm/: CMakeLists.txt
mono/cil/: CMakeLists.txt
mono/dis/: CMakeLists.txt
mono/io-layer/: CMakeLists.txt
mono/metadata/: CMakeLists.txt  icall-def.h  icall.c  threadpool-ms-io.c
mono/mini/: CMakeLists.txt  driver.c  gen-jit-regression-tests.cs  jit-regression-tests.cpp  jit-regression-tests.h  mini-amd64.c  tramp-amd64.c
mono/mini/cmake/: GenerateBuildVersionHeader.cmake
mono/sgen/: CMakeLists.txt
mono/tests/: CMakeLists.txt
mono/utils/: CMakeLists.txt  mono-mmap.c  sha1.c
runtime/: CMakeLists.txt
support/: CMakeLists.txt
