
add_subdirectory(arch)
add_subdirectory(utils)
add_subdirectory(io-layer)
if(NOT INSTALL_MONOTOUCH)
  add_subdirectory(cil)
endif()
add_subdirectory(metadata)
if(SUPPORT_SGEN)
  add_subdirectory(sgen)
endif()
add_subdirectory(mini)
#if(NOT INSTALL_MONOTOUCH)
#  add_subdirectory(dis)
#endif()
#add_subdirectory(profiler)
